fix download link navigating to set up on mobile

--- a/assets/sass/v2/_okta-verify.scss
+++ b/assets/sass/v2/_okta-verify.scss
@@ -58,6 +58,11 @@
     text-decoration: none;
   }
 
+  .sameDevice-setup .download-ov-link {
+    color: #007cc0;
+    text-decoration: none;
+  }
+
   .app-store-logo {
     display: block;
     margin: 10px auto;
